Refactored to remove IDataContext as the DataContext class is an implmentation detail of the IRepository inplementation using Entity Framwork.

--- a/DeckBuilderPro.Data/DeckBuilderPro.Data.csproj
+++ b/DeckBuilderPro.Data/DeckBuilderPro.Data.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDataContext.cs" />
     <Compile Include="Configuration\CardRarityConfiguration.cs" />
     <Compile Include="Configuration\CardTypeConfiguration.cs" />
     <Compile Include="Configuration\CollectionCardConfiguration.cs" />
