Added Google Charts for Deck List

--- a/DeckBuilderPro.ViewModels/DeckBuilderPro.ViewModels.csproj
+++ b/DeckBuilderPro.ViewModels/DeckBuilderPro.ViewModels.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CardCountItem.cs" />
     <Compile Include="CardTypeViewModel.cs" />
     <Compile Include="CardViewModel.cs" />
     <Compile Include="CollectionCardViewModel.cs" />
