--- a/DeckBuilderPro/packages.config
+++ b/DeckBuilderPro/packages.config
@@ -9,7 +9,7 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.0.3.12153" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net40" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
-  <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
+  <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
@@ -29,6 +29,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
+  <package id="Twitter.Typeahead" version="0.10.2" targetFramework="net451" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net451" />
   <package id="Unity.Mvc4" version="1.2.0.0" targetFramework="net40" />
   <package id="Unity.WebAPI" version="5.1" targetFramework="net451" />
