--- a/DeckBuilderPro.Data/DeckBuilderPro.Data.csproj
+++ b/DeckBuilderPro.Data/DeckBuilderPro.Data.csproj
@@ -59,6 +59,14 @@
     <Compile Include="Configuration\FormatConfiguration.cs" />
     <Compile Include="Configuration\GamesSetConfiguration.cs" />
     <Compile Include="Configuration\UserConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\CardConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\CardRarityConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\CardTypeConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\CollectionCardConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\CollectionConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\DeckCardConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\DeckConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\TeamAffiliationsConfiguration.cs" />
     <Compile Include="Configuration\VsSystem_CardRaritiesMap.cs" />
     <Compile Include="Configuration\VsSystem_CardTextsConfiguration.cs" />
     <Compile Include="Configuration\VsSystem_TeamAffiliationConfiguration.cs" />
@@ -86,6 +94,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
