--- a/DeckBuilderPro.Entity/DeckBuilderPro.Entity.csproj
+++ b/DeckBuilderPro.Entity/DeckBuilderPro.Entity.csproj
@@ -53,16 +53,16 @@
     <Compile Include="Manufacturer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="VsSystem\Card.cs" />
-    <Compile Include="VsSystem\CardRarity.cs" />
-    <Compile Include="VsSystem\CardText.cs" />
-    <Compile Include="VsSystem\CardType.cs" />
-    <Compile Include="VsSystem\Collection.cs" />
-    <Compile Include="VsSystem\CollectionCard.cs" />
-    <Compile Include="VsSystem\Deck.cs" />
-    <Compile Include="VsSystem\DeckCard.cs" />
-    <Compile Include="VsSystem\Format.cs" />
-    <Compile Include="VsSystem\TeamAffiliation.cs" />
+    <Compile Include="VsSystem\VsSystemCard.cs" />
+    <Compile Include="VsSystem\VsSystemCardRarity.cs" />
+    <Compile Include="VsSystem\VsSystemCardText.cs" />
+    <Compile Include="VsSystem\VsSystemCardType.cs" />
+    <Compile Include="VsSystem\VsSystemCollection.cs" />
+    <Compile Include="VsSystem\VsSystemCollectionCard.cs" />
+    <Compile Include="VsSystem\VsSystemDeck.cs" />
+    <Compile Include="VsSystem\VsSystemDeckCard.cs" />
+    <Compile Include="VsSystem\VsSystemFormat.cs" />
+    <Compile Include="VsSystem\VsSystemTeamAffiliation.cs" />
     <Compile Include="VsSystem_Card.cs" />
     <Compile Include="VsSystem_GameSet.cs" />
     <Compile Include="VsSystem_TeamAffiliation.cs" />
