Phase I refactor adding new classes to support the new seperation of data in the database

--- a/DeckBuilderPro.Data/DeckBuilderPro.Data.csproj
+++ b/DeckBuilderPro.Data/DeckBuilderPro.Data.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Configuration\UserConfiguration.cs" />
     <Compile Include="Configuration\VsSystem\VsSystemCardConfiguration.cs" />
     <Compile Include="Configuration\VsSystem\VsSystemCardRarityConfiguration.cs" />
+    <Compile Include="Configuration\VsSystem\VsSystemCardTextConfiguration.cs" />
     <Compile Include="Configuration\VsSystem\VsSystemCardTypeConfiguration.cs" />
     <Compile Include="Configuration\VsSystem\VsSystemCollectionCardConfiguration.cs" />
     <Compile Include="Configuration\VsSystem\VsSystemCollectionConfiguration.cs" />
