--- a/DeckBuilderPro.DataManager/DeckBuilderPro.DataManager.csproj
+++ b/DeckBuilderPro.DataManager/DeckBuilderPro.DataManager.csproj
@@ -60,8 +60,16 @@
     <Compile Include="Interfaces\ICollectionsManager.cs" />
     <Compile Include="Interfaces\IDecksManager.cs" />
     <Compile Include="DecksManagers.cs" />
-    <Compile Include="Interfaces\VsSystem\ICardsManager.cs" />
-    <Compile Include="VsSystem\CardsManager.cs" />
+    <Compile Include="Interfaces\VsSystem\IVsSystemCardsManager.cs" />
+    <Compile Include="Interfaces\VsSystem\IVsSystemCollectionCardsManager.cs" />
+    <Compile Include="Interfaces\VsSystem\IVsSystemCollectionsManager.cs" />
+    <Compile Include="Interfaces\VsSystem\IVsSystemDeckCardsManager.cs" />
+    <Compile Include="Interfaces\VsSystem\IVsSystemDecksManager.cs" />
+    <Compile Include="VsSystem\VsSystemCardsManager.cs" />
+    <Compile Include="VsSystem\VsSystemCollectionCardsManager.cs" />
+    <Compile Include="VsSystem\VsSystemCollectionsManager.cs" />
+    <Compile Include="VsSystem\VsSystemDeckCardManager.cs" />
+    <Compile Include="VsSystem\VsSystemDecksManager.cs" />
     <Compile Include="VsSystem_CardsDataManager.cs" />
     <Compile Include="GamesDataManager.cs" />
     <Compile Include="Interfaces\IDataManager.cs" />
