--- a/DeckBuilderPro.Mapper/DeckBuilderPro.Mapper.csproj
+++ b/DeckBuilderPro.Mapper/DeckBuilderPro.Mapper.csproj
@@ -56,6 +56,8 @@
     <Compile Include="BaseViewModelMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VsSystemCardViewModelMapper.cs" />
+    <Compile Include="VsSystemCollectionViewModel.cs" />
+    <Compile Include="VsSystemDeckCardViewModelMapper.cs" />
     <Compile Include="VsSystemDeckViewModelMapper.cs" />
   </ItemGroup>
   <ItemGroup>
